# Notchx

./: .gitignore  README.md  check_sessions.ps1  fix_patch.py  index.html  package-lock.json  package.json  patch_ui.py  patch_ui_fixed.py  test_media.ps1  test_smtc.ps1  test_win_media.cjs  test_win_media.js  update_ui.py  ux_flaws.txt  vite.config.ts
electron/: dev.cjs  main.cjs  media.ps1  preload.cjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: App.tsx  desktopBridge.ts
src/app/components/: CloudSync.tsx  DynamicIsland.tsx  PluginsList.tsx  SettingsDashboard.tsx  TrueAudioVisualizer.tsx  WorkflowBuilder.tsx
src/app/components/ui/: sidebar.tsx
src/styles/: theme.css
supabase/functions/server/: index.tsx  kv_store.tsx
utils/supabase/: info.tsx
