[package]
name = "dynamic-island-win"
version = "0.0.1"
description = "A Windows desktop dynamic island powered by Tauri"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open", "window-all", "system-tray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
battery = "0.7.8"
windows-sys = { version = "0.52", features = ["Win32_UI_Input_KeyboardAndMouse"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
